fix wrapping of flow diagram tooltips

--- a/cdap-ui/app/directives/flow-graph/flow.less
+++ b/cdap-ui/app/directives/flow-graph/flow.less
@@ -19,7 +19,6 @@
 
 my-flow-graph, my-workflow-graph {
   .diagram-container div.tooltip .tooltip-inner {
-    white-space: nowrap;
     max-width: 250px;
   }
 }
